--- a/ckanext/sokigo/templates/package/snippets/tags.html
+++ b/ckanext/sokigo/templates/package/snippets/tags.html
@@ -1,6 +1,6 @@
 {% if tags %}
 {% block tags_title %}
-<h3> {% trans %}Categories and keywords{% endtrans %} </h3>
+<h3> {{ _('Categories and keywords') }} </h3>
 {% endblock %}
 <section class="tags">
     {% snippet 'snippets/tag_list.html', tags=tags, _class='tag-list well' %}
