--- a/ckanext/sokigo/templates/package/read_base.html
+++ b/ckanext/sokigo/templates/package/read_base.html
@@ -3,4 +3,13 @@
 {% block package_social %}
 {% endblock %}
 
+{% block content_action %}
+    {{ super() }}
+
+    {% if h.check_access('package_update', {'id':pkg.id }) %}
+        {% link_for _('Copy'), controller='ckanext.sokigo.controller:CopyController', action='copy', id=pkg.name, class_='btn btn-success', icon='copy' %}
+    {% endif %}
+
+{% endblock %}
+
 {{ super() }}
