--- a/ckanext/sokigo/templates/package/read_base.html
+++ b/ckanext/sokigo/templates/package/read_base.html
@@ -1,15 +1,36 @@
 {% ckan_extends %}
 
-{% block package_social %}
-{% endblock %}
+{% block secondary_content %}
 
-{% block content_action %}
-    {{ super() }}
+  {% block secondary_help_content %}{% endblock %}
+
+  {% block package_info %}
+    {% snippet 'package/snippets/info.html', pkg=pkg %}
+  {% endblock %}
 
     {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial', '') %}
     {% if dataset_extent %}
         {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=dataset_extent %}
     {% endif %}
+
+  {% block package_organization %}
+    {% if pkg.organization %}
+      {% set org = h.get_organization(pkg.organization.name) %}
+      {% snippet "snippets/organization.html", organization=org, has_context_title=true %}
+    {% endif %}
+  {% endblock %}
+
+  {% block package_social %}
+  {% endblock %}
+
+  {% block package_license %}
+    {% snippet "snippets/license.html", pkg_dict=pkg %}
+  {% endblock %}
+
+{% endblock %}
+
+{% block content_action %}
+    {{ super() }}
 
     {% if h.check_access('package_update', {'id':pkg.id }) %}
         {% link_for _('Copy'), controller='ckanext.sokigo.controller:CopyController', action='copy', id=pkg.name, class_='btn btn-success', icon='copy' %}
